--- a/package.json
+++ b/package.json
@@ -1,49 +1,34 @@
 {
-  "name": "@mento-protocol/mento-core",
-  "description": "The mento tooling repo",
+  "name": "@mento-protocol/mento-deployment",
+  "description": "Scripts for deploying upgrades to the Mento protocol",
   "license": "Apache-2.0",
   "version": "1.0.0",
-  "files": [
-    "dist",
-    "contracts",
-    "img"
-  ],
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
   "author": {
-    "name": "mento-protocol"
+    "name": "Mento Labs"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mento-protocol/mento-core"
+    "url": "git+https://github.com/mento-protocol/mento-deployment"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
-    "@ethersproject/abi": "^5.0.0",
-    "@ethersproject/bytes": "^5.0.0",
-    "@ethersproject/providers": "^5.0.0",
-    "@typechain/ethers-v5": "^10.1.1",
-    "@types/node": "18.11.9",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "ethers": "^5.1.3",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
     "pinst": "^3.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-dev.22",
     "solhint": "^3.3.7",
-    "solhint-plugin-prettier": "^0.0.5",
-    "typechain": "^8.1.1",
-    "typescript": "^4.9.3"
+    "solhint-plugin-prettier": "^0.0.5"
   },
   "keywords": [
     "mento",
     "celo",
     "solidity"
   ],
-  "private": false,
+  "private": true,
   "scripts": {
     "lint": "yarn prettier && yarn solhint",
     "lint:check": "yarn prettier:check && yarn solhint:check",
@@ -53,8 +38,6 @@
     "prettier": "prettier --config \"./.prettierrc.yml\" --write \"**/*.{json,md,sol,yml}\"",
     "prettier:check": "prettier --config \"./.prettierrc.yml\" --check \"**/*.{json,md,sol,yml}\"",
     "solhint": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\"",
-    "solhint:check": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\" -q",
-    "generatetypes": "node generateTypes.js",
-    "build": "tsc"
+    "solhint:check": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\" -q"
   }
 }
