--- a/foundry.toml
+++ b/foundry.toml
@@ -13,7 +13,7 @@ solc = "0.5.17"
 legacy = true
 fs_permissions = [
     { access = "read", path = "./broadcast"}, 
-    { access = "read", path = "./script/dependencies.json"}
+    { access = "read", path = "./script/upgrades/dependencies.json"}
 ]
 
 # libraries = [
