--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,15 @@
-PRIVATE_KEY=
 CELOSCAN_API_KEY=
-CELO_RPC_URL='https://forno.celo.org'
-BAKLAVA_RPC_URL='https://baklava-forno.celo-testnet.org'
-BAKLAVA_DEPLOYER_PK='0xPOTATO'
+
+CELO_MAINNET_RPC_URL=https://forno.celo.org
+BAKLAVA_RPC_URL=https://baklava-forno.celo-testnet.org
+ALFAJORES_RPC_URL=
+
+BAKLAVA_DEPLOYER_PK=
+ALFAJORES_DEPLOYER_PK=
+CELO_MAINNET_DEPLOYER_PK=
+
+# Baklava governance keys
+BAKLAVA_APPROVER_PK=
+BAKLAVA_APPROVER=
+BAKLAVA_SIGNER_PK=
+BAKLAVA_SIGNER=
