--- a/foundry.toml
+++ b/foundry.toml
@@ -45,5 +45,6 @@ no_match_contract = "RandomTest"
 match_contract = "Integration"
 
 [rpc_endpoints]
-celo_mainnet="${CELO_RPC_URL}"
+celo_mainnet="${CELO_MAINNET_RPC_URL}"
 baklava="${BAKLAVA_RPC_URL}"
+alfajores="${ALFAJORES_RPC_URL}"
