chore: baklava v2.0.0 redeploy and too much refactoring (#24)
Because we cut a v2.0.0 version on mento-core, we did another deployment to Baklava so everything would be in order.
During this deployment, we refactored some of the script structure here to help us and added some scripts to deal with reserve funding, so I could easily migrate funds between the previously deployed reserve and the new one.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,13 @@
     "prettier": "prettier --config \"./.prettierrc.yml\" --write \"**/*.{json,md,sol,yml}\"",
     "prettier:check": "prettier --config \"./.prettierrc.yml\" --check \"**/*.{json,md,sol,yml}\"",
     "solhint": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\"",
-    "solhint:check": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\" -q"
+    "solhint:check": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\" -q",
+    "deploy": "./bin/deploy.sh",
+    "script:dev": "./bin/dev-script.sh",
+    "cgp": "./bin/cgp.sh",
+    "cgp:pass": "./bin/cgp-pass.sh",
+    "show": "./bin/show.sh",
+    "clean": "./bin/clean.sh",
+    "secrets:get": "./bin/get-secrets.sh"
   }
 }
