fix: rename celo-mainnet to celo

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 CELOSCAN_API_KEY=
 
-CELO_MAINNET_RPC_URL=https://forno.celo.org
+CELO_RPC_URL=https://forno.celo.org
 BAKLAVA_RPC_URL=https://baklava-forno.celo-testnet.org
 ALFAJORES_RPC_URL=
 
 BAKLAVA_DEPLOYER_PK=
 ALFAJORES_DEPLOYER_PK=
-CELO_MAINNET_DEPLOYER_PK=
+CELO_DEPLOYER_PK=
 
 # Baklava governance keys
 BAKLAVA_APPROVER_PK=
