--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lint": "yarn prettier && yarn solhint",
     "lint:check": "yarn prettier:check && yarn solhint:check",
     "postinstall": "husky install",
-    "verifyByteCodes": "yarn ts-node ./bin/verifyBytecodes.ts",
+    "verifyBytecodes": "yarn ts-node ./bin/verifyBytecodes.ts",
     "prettier": "prettier --config \"./.prettierrc.yml\" --write \"**/*.{json,md,sol,yml}\"",
     "prettier:check": "prettier --config \"./.prettierrc.yml\" --check \"**/*.{json,md,sol,yml}\"",
     "solhint": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\"",
