--- a/package.json
+++ b/package.json
@@ -35,15 +35,17 @@
     "lint": "yarn prettier && yarn solhint",
     "lint:check": "yarn prettier:check && yarn solhint:check",
     "postinstall": "husky install",
-    "verifyBytecodes": "yarn ts-node ./bin/verifyBytecodes.ts",
     "prettier": "prettier --config \"./.prettierrc.yml\" --write \"**/*.{json,md,sol,yml}\"",
     "prettier:check": "prettier --config \"./.prettierrc.yml\" --check \"**/*.{json,md,sol,yml}\"",
     "solhint": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\"",
     "solhint:check": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\" -q",
+    "verify:bytecodes": "yarn ts-node ./bin/verify-bytecodes.ts",
     "deploy": "./bin/deploy.sh",
     "script:dev": "./bin/dev-script.sh",
     "cgp": "./bin/cgp.sh",
     "cgp:pass": "./bin/cgp-pass.sh",
+    "cgp:diff": "./bin/cgp-diff.sh",
+    "cgp:yaml-to-json": "./bin/cgp-yaml-to-json.sh",
     "show": "./bin/show.sh",
     "clean": "./bin/clean.sh",
     "secrets:get": "./bin/get-secrets.sh"
