forge install: mento-core
v2.1.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/mento-core-2.2.0"]
 	path = lib/mento-core-2.2.0
 	url = https://github.com/mento-protocol/mento-core
+[submodule "lib/mento-core"]
+	path = lib/mento-core
+	url = https://github.com/mento-protocol/mento-core
