--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/mento-core-2.2.0"]
 	path = lib/mento-core-2.2.0
 	url = https://github.com/mento-protocol/mento-core
+[submodule "lib/mento-core-2.1.0"]
+	path = lib/mento-core-2.1.0
+	url = https://github.com/mento-protocol/mento-core
