--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/bowd/celo-foundry
 [submodule "lib/mento-core-2.2.0"]
 	path = lib/mento-core-2.2.0
-	url = https://github.com/mento-protocol/mento-core-2.2.0
+	url = https://github.com/mento-protocol/mento-core
 [submodule "lib/mento-core-2.1.0"]
 	path = lib/mento-core-2.1.0
 	url = https://github.com/mento-protocol/mento-core
