--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
     "celo",
     "solidity"
   ],
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn lint:check"
+    }
+  },
   "private": true,
   "scripts": {
     "lint": "yarn prettier && yarn solhint",
