--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         run: "yarn install --immutable"
 
       - name: "Lint the contracts"
-        run: "yarn lint"
+        run: "yarn lint:check"
 
       - name: "Add lint summary"
         run: |
