--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "solhint:check": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\" -q",
     "verify:bytecodes": "yarn ts-node ./bin/verify-bytecodes.ts",
     "deploy": "./bin/deploy.sh",
+    "build": "./bin/build.sh",
     "script:dev": "./bin/dev-script.sh",
     "cgp": "./bin/cgp.sh",
     "cgp:pass": "./bin/cgp-pass.sh",
