feat: hardhat setup

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,17 @@ yarn-error.log*
 # broadcasts
 !/broadcast
 /broadcast/Dev-*
+node_modules
+.env
+
+# Hardhat files
+/cache
+/artifacts
+
+# TypeChain files
+/typechain
+/typechain-types
+
+# solidity-coverage files
+/coverage
+/coverage.json
