feat: merkleTree and verify

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@nomicfoundation/hardhat-foundry": "^1.1.1",
+    "@nomicfoundation/hardhat-verify": "^2.0.3",
     "commitizen": "^4.2.4",
+    "csv-parse": "^5.5.3",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.3.1",
     "ethers": "^6.9.2",
@@ -23,6 +25,7 @@
     "hardhat-deploy": "^0.11.45",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
+    "merkletreejs": "^0.3.11",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-dev.22",
     "solhint": "^3.3.7",
