--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "verify:bytecodes": "yarn ts-node ./bin/verify-bytecodes.ts",
     "deploy": "./bin/deploy.sh",
     "deploy:localhost": "yarn hardhat deploy --network localhost",
-    "deploy:fork": "yarn hardhat deploy",
+    "deploy:fork": "yarn hardhat deploy --tags GOV_FORK",
     "deploy:alfajores": "yarn hardhat deploy --network alfajores",
     "deploy:baklava": "yarn hardhat deploy --network baklava",
     "deploy:celo": "yarn hardhat deploy --network celo",
@@ -59,6 +59,7 @@
     "script:dev": "./bin/dev-script.sh",
     "cgp": "./bin/cgp.sh",
     "cgp:pass": "./bin/cgp-pass.sh",
+    "cgp:pass:no-exe": "./bin/cgp-pass-no-exe.sh",
     "cgp:diff": "./bin/cgp-diff.sh",
     "cgp:check": "./bin/cgp-check.sh",
     "cgp:yaml-to-json": "./bin/cgp-yaml-to-json.sh",
