fix: rename execute

--- a/package.json
+++ b/package.json
@@ -54,12 +54,12 @@
     "deploy:alfajores": "yarn hardhat deploy --network alfajores",
     "deploy:baklava": "yarn hardhat deploy --network baklava",
     "deploy:celo": "yarn hardhat deploy --network celo",
-    "execute": "yarn hardhat executeProposal",
     "build": "./bin/build.sh",
     "script:dev": "./bin/dev-script.sh",
     "cgp": "./bin/cgp.sh",
     "cgp:pass": "./bin/cgp-pass.sh",
     "cgp:pass:no-exe": "./bin/cgp-pass-no-exe.sh",
+    "cgp:execute": "yarn hardhat executeProposal",
     "cgp:diff": "./bin/cgp-diff.sh",
     "cgp:check": "./bin/cgp-check.sh",
     "cgp:yaml-to-json": "./bin/cgp-yaml-to-json.sh",
