--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "solhint:check": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\" -q",
     "verify:bytecodes": "yarn ts-node ./bin/verify-bytecodes.ts",
     "deploy": "./bin/deploy.sh",
-    "deploy:localhost": "yarn hardhat deploy --network localhost",
-    "deploy:fork": "yarn hardhat deploy --tags GOV_FORK",
-    "deploy:alfajores": "yarn hardhat deploy --network alfajores",
-    "deploy:baklava": "yarn hardhat deploy --network baklava",
-    "deploy:celo": "yarn hardhat deploy --network celo",
+    "deploy-gov:localhost": "yarn hardhat deploy --network localhost",
+    "deploy-gov:fork": "yarn hardhat deploy --tags GOV_FORK",
+    "deploy-gov:alfajores": "yarn hardhat deploy --network alfajores",
+    "deploy-gov:baklava": "yarn hardhat deploy --network baklava",
+    "deploy-gov:celo": "yarn hardhat deploy --network celo",
     "build": "./bin/build.sh",
     "script:dev": "./bin/dev-script.sh",
     "cgp": "./bin/cgp.sh",
