Governance Deployment Scripts (#146)
* feat: folder structure

* forge install: mento-core-gov

61eb278c1a1a16f103f6f1cfbc5b27aa577732f7

* feat: deploy contract

* feat: hardhat setup

* feat: deployments

* fix: solc version

* feat: celo proposal

* feat: execute script

* remove: old mento-core

* forge install: mento-core-gov

86dcba6356c1f2ae744ffc8d8156d87dcfa5457e

* feat: post deployment checks

* feat: merkleTree and verify

* remove: old lib

* forge install: mento-core-gov

9327a858d3aeeb6085d4f2cd88f74915f455b842

* fix: hashing issue

* refactor: verification in task

* refactor: execute task

* chore: prettier

* feat: cpg-pass with no exe

* fix: rename execute

* feat: use constant celo registiry

* feat: add new vars to .env.example

* feat: baklav explorer config

* fix: after reviews

* feat: unignore deployments folder

--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,26 @@ CELOSCAN_API_KEY=
 
 CELO_RPC_URL=https://forno.celo.org
 BAKLAVA_RPC_URL=https://baklava-forno.celo-testnet.org
-ALFAJORES_RPC_URL=
+ALFAJORES_RPC_URL=https://alfajores-forno.celo-testnet.org
 
 BAKLAVA_DEPLOYER_PK=
 ALFAJORES_DEPLOYER_PK=
 CELO_DEPLOYER_PK=
+MENTO_DEPLOYER_PK=
 
 # Baklava governance keys
 BAKLAVA_APPROVER_PK=
 BAKLAVA_APPROVER=
 BAKLAVA_SIGNER_PK=
 BAKLAVA_SIGNER=
+
+# Alfajores governance keys
+ALFAJORES_SIGNER=
+ALFAJORES_SIGNER_PK=
+ALFAJORES_APPROVER=
+ALFAJORES_APPROVER_PK=
+
+
+MENTO_LABS_MULTISIG=
+WATCHDOG_MULTISIG=
+FRAKTAL_SIGNER=
