feat: remove hardhat and do deployment through Foundry

--- a/.gitignore
+++ b/.gitignore
@@ -22,19 +22,7 @@ yarn-error.log*
 # broadcasts
 !/broadcast
 /broadcast/Dev-*
+!/broadcast/ExecuteProposal*
+
 node_modules
 .env
-
-# Hardhat files
-/cache
-/artifacts
-
-# TypeChain files
-/typechain
-/typechain-types
-
-# solidity-coverage files
-/coverage
-/coverage.json
-
-/cache_hardhat
