--- a/package.json
+++ b/package.json
@@ -13,16 +13,11 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
-    "@nomicfoundation/hardhat-ethers": "^3.0.5",
-    "@nomicfoundation/hardhat-foundry": "^1.1.1",
-    "@nomicfoundation/hardhat-verify": "^2.0.3",
     "commitizen": "^4.2.4",
     "csv-parse": "^5.5.3",
     "cz-conventional-changelog": "^3.3.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.2",
     "ethers": "^6.9.2",
-    "hardhat": "^2.19.4",
-    "hardhat-deploy": "^0.11.45",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
     "merkletreejs": "^0.3.11",
@@ -48,23 +43,20 @@
     "solhint": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\"",
     "solhint:check": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\" -q",
     "verify:bytecodes": "yarn ts-node ./bin/verify-bytecodes.ts",
+    "verify:celoscan": "yarn ts-node ./bin/verify-celoscan.ts",
     "deploy": "./bin/deploy.sh",
-    "deploy-gov:localhost": "yarn hardhat deploy --network localhost",
-    "deploy-gov:fork": "yarn hardhat deploy --tags GOV_FORK",
-    "deploy-gov:alfajores": "yarn hardhat deploy --network alfajores",
-    "deploy-gov:baklava": "yarn hardhat deploy --network baklava",
-    "deploy-gov:celo": "yarn hardhat deploy --network celo",
     "build": "./bin/build.sh",
     "script:dev": "./bin/dev-script.sh",
     "cgp": "./bin/cgp.sh",
     "cgp:pass": "./bin/cgp-pass.sh",
     "cgp:pass:no-exe": "./bin/cgp-pass-no-exe.sh",
-    "cgp:execute": "yarn hardhat executeProposal",
     "cgp:diff": "./bin/cgp-diff.sh",
     "cgp:check": "./bin/cgp-check.sh",
+    "cgp:execute": "./bin/cgp-execute.sh",
     "cgp:yaml-to-json": "./bin/cgp-yaml-to-json.sh",
     "show": "./bin/show.sh",
     "clean": "./bin/clean.sh",
-    "secrets:get": "./bin/get-secrets.sh"
+    "secrets:get": "./bin/get-secrets.sh",
+    "merkle-tree:build": "yarn ts-node ./bin/merkle-tree.ts"
   }
 }
