--- a/.gitmodules
+++ b/.gitmodules
@@ -10,6 +10,9 @@
 [submodule "lib/mento-core-2.0.0"]
 	path = lib/mento-core-2.0.0
 	url = https://github.com/mento-protocol/mento-core
-[submodule "lib/mento-core-gov"]
-	path = lib/mento-core-gov
+[submodule "lib/forge-std-next"]
+	path = lib/forge-std-next
+	url = https://github.com/foundry-rs/forge-std
+[submodule "lib/mento-core-2.3.0"]
+	path = lib/mento-core-2.3.0
 	url = https://github.com/mento-protocol/mento-core
