feat: add command to package.json

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "solhint": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\"",
     "solhint:check": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\" -q",
     "verify:bytecodes": "yarn ts-node ./bin/verify-bytecodes.ts",
+    "verify:celoscan": "yarn ts-node ./bin/verify-celoscan.ts",
     "deploy": "./bin/deploy.sh",
     "deploy-gov:localhost": "yarn hardhat deploy --network localhost",
     "deploy-gov:fork": "yarn hardhat deploy --tags GOV_FORK",
