--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "lib/mento-core-2.3.0"]
 	path = lib/mento-core-2.3.0
 	url = https://github.com/mento-protocol/mento-core
+[submodule "lib/mento-core-copkes"]
+	path = lib/mento-core-copkes
+	url = https://github.com/mento-protocol/mento-core
