--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "ethers": "^6.9.2",
     "husky": "^8.0.0",
     "lint-staged": "^13.0.3",
-    "merkletreejs": "^0.3.11",
+    "@openzeppelin/merkle-tree": "^1.0.5",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-dev.22",
     "solhint": "^3.3.7",
