feat: add command to verify contracts on celoscan (#163)
* feat: add command to verify celoscan

* feat: add command to package.json

* feat: use a single API key for celoscan

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "solhint": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\"",
     "solhint:check": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\" -q",
     "verify:bytecodes": "yarn ts-node ./bin/verify-bytecodes.ts",
+    "verify:celoscan": "yarn ts-node ./bin/verify-celoscan.ts",
     "deploy": "./bin/deploy.sh",
     "build": "./bin/build.sh",
     "script:dev": "./bin/dev-script.sh",
