--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ yarn-error.log*
 !/broadcast
 /broadcast/Dev-*
 !/broadcast/ExecuteProposal*
+/broadcast/PassProposal*
+/broadcast/QueueProposal*
 
 node_modules
 .env
