feat: hooked in celoscan verification script into pre-commit check

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "solhint:check": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\" -q",
     "verify:bytecodes": "yarn ts-node ./bin/verify-bytecodes.ts",
     "verify:celoscan": "yarn ts-node ./bin/verify-celoscan.ts",
+    "check:verification:celoscan": "./bin/check-celoscan-verification.sh",
     "deploy": "./bin/deploy.sh",
     "build": "./bin/build.sh",
     "script:dev": "./bin/dev-script.sh",
