feat: allow multiple file paths to be passed to pre-commit check script

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -2,5 +2,5 @@
   "*.{json,md,sol,yml}": [
     "prettier --config .prettierrc.yml --write"
   ],
-  "run*.json": "./bin/pre-commit-check.sh"
+  "broadcast/**/*.json": "./bin/pre-commit-check.sh"
 }
