celoscan contract verification check script (#211)
* feat: celoscan contract verification check script
* fix: repaired husky + lint-staged setup
* feat: hooked in celoscan verification script into pre-commit check
* feat: allow multiple file paths to be passed to pre-commit check script
* build: bump CI node version from v16 to v20
* build: skip pre-commit verification check for baklava
* build: also match factory contract deployments in pre commit script
* build: also detect contracts deployed via CREATE2 in pre-commit verification check

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,5 +1,6 @@
 {
   "*.{json,md,sol,yml}": [
-    "prettier --config ./.prettierrc.yml --write"
-  ]
+    "prettier --config .prettierrc.yml --write"
+  ],
+  "broadcast/**/*.json": "./bin/pre-commit-check.sh"
 }
