--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.4.2",
     "ethers": "^6.9.2",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.0.3",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.9",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-dev.22",
     "solhint": "^3.3.7",
@@ -44,6 +44,7 @@
     "solhint:check": "solhint --config \"./.solhint.json\" \"{contracts,test,script}/**/*.sol\" -q",
     "verify:bytecodes": "yarn ts-node ./bin/verify-bytecodes.ts",
     "verify:celoscan": "yarn ts-node ./bin/verify-celoscan.ts",
+    "check:verification:celoscan": "./bin/check-celoscan-verification.sh",
     "deploy": "./bin/deploy.sh",
     "build": "./bin/build.sh",
     "script:dev": "./bin/dev-script.sh",
@@ -56,7 +57,8 @@
     "show": "./bin/show.sh",
     "clean": "./bin/clean.sh",
     "secrets:get": "./bin/get-secrets.sh",
-    "merkle-tree:build": "yarn ts-node ./bin/merkle-tree.ts"
+    "merkle-tree:build": "yarn ts-node ./bin/merkle-tree.ts",
+    "prepare": "husky"
   },
   "dependencies": {
     "@quicknode/sdk": "^2.3.0"
