MU07 - Chainlink Relayers (#206)

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,6 +16,9 @@
 [submodule "lib/mento-core-2.3.1"]
 	path = lib/mento-core-2.3.1
 	url = https://github.com/mento-protocol/mento-core
-[submodule "lib/mento-core-2.4.0"]
-	path = lib/mento-core-2.4.0
+[submodule "lib/mento-core-develop"]
+	path = lib/mento-core-develop
+	url = https://github.com/mento-protocol/mento-core
+[submodule "lib/mento-core-2.5.0"]
+	path = lib/mento-core-2.5.0
 	url = https://github.com/mento-protocol/mento-core
