--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "verify:bytecodes": "yarn ts-node ./bin/verify-bytecodes.ts",
     "verify:celoscan": "yarn ts-node ./bin/verify-celoscan.ts",
     "check:verification:celoscan": "./bin/check-celoscan-verification.sh",
-    "deploy": "./bin/deploy.sh",
     "build": "./bin/build.sh",
     "script:dev": "./bin/dev-script.sh",
     "cgp": "./bin/cgp.sh",
     "cgp:pass": "./bin/cgp-pass.sh",
+    "cgp:deploy": "./bin/cgp-deploy.sh",
     "cgp:diff": "./bin/cgp-diff.sh",
     "cgp:check": "./bin/cgp-check.sh",
     "cgp:execute": "./bin/cgp-execute.sh",
