--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "lib/mento-core-2.5.0"]
 	path = lib/mento-core-2.5.0
 	url = https://github.com/mento-protocol/mento-core
+[submodule "lib/merkle-distributor"]
+	path = lib/merkle-distributor
+	url = https://github.com/Uniswap/merkle-distributor
