--- a/foundry.toml
+++ b/foundry.toml
@@ -15,6 +15,7 @@ fs_permissions = [
     { access = "read", path = "./out" },
     { access = "read", path = "./data" },
     { access = "read", path = "./script/upgrades/dependencies.json" },
+    { access = "read", path = "./script/upgrades/MINIDROP/data/" },
 ]
 via_ir = true
 
