--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "lib/mento-core-2.6.2"]
 	path = lib/mento-core-2.6.2
 	url = https://github.com/mento-protocol/mento-core
+[submodule "lib/mento-core-2.6.3"]
+	path = lib/mento-core-2.6.3
+	url = https://github.com/mento-protocol/mento-core
