--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "lib/mento-core-2.6.3"]
 	path = lib/mento-core-2.6.3
 	url = https://github.com/mento-protocol/mento-core
+[submodule "lib/mento-core-2.6.4"]
+	path = lib/mento-core-2.6.4
+	url = https://github.com/mento-protocol/mento-core
