feat: add mgp06 (#269)
* feat: add mgp06

* delete: broadcast file

* chore: give read access to parent dir instead

--- a/foundry.toml
+++ b/foundry.toml
@@ -14,8 +14,7 @@ fs_permissions = [
     { access = "read", path = "./broadcast" },
     { access = "read", path = "./out" },
     { access = "read", path = "./data" },
-    { access = "read", path = "./script/upgrades/dependencies.json" },
-    { access = "read", path = "./script/upgrades/MINIDROP/data/" },
+    { access = "read", path = "./script/upgrades/" },
 ]
 via_ir = true
 
