chore: add env vars

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ ALFAJORES_DEPLOYER_PK=
 CELO_DEPLOYER_PK=
 MENTO_DEPLOYER_PK=
 
+# Addresses capable of updating the data on the MockChainlinkAggregator and MockRedstoneAdapter contracts on Alfajores
+MOCK_CHAINLINK_PROVIDER_PK=
+MOCK_REDSTONE_PROVIDER_PK=
+
 # Alfajores governance keys
 ALFAJORES_SIGNER=
 ALFAJORES_SIGNER_PK=
