fix: add sepolia rpc to .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ CELOSCAN_API_KEY=
 
 CELO_RPC_URL=https://forno.celo.org
 ALFAJORES_RPC_URL=https://alfajores-forno.celo-testnet.org
+SEPOLIA_RPC_URL=https://forno.celo-sepolia.celo-testnet.org
 
 ALFAJORES_DEPLOYER_PK=
 CELO_DEPLOYER_PK=
